crates/node/tests/it/gas/snapshots/it__gas__tip20_transfers__account_keychain_authorize_admin_key_t4_gas_snapshot.snap
---
source: crates/node/tests/it/gas/tip20_transfers.rs
expression: gas
---
t4_authorize_admin_key_pre_t6_revert: 272108
