crates/node/tests/it/gas/snapshots/it__gas__tip20_transfers__tip20_transfer_gas_snapshot_t5.snap
---
source: crates/node/tests/it/gas/tip20_transfers.rs
expression: gas
---
"policy:all_whitelisted::amount:full::rewards_recipient_opted_out": 52746
"policy:all_whitelisted::amount:full::rewards_recipient_opted_out_with_delta": 553458
"policy:all_whitelisted::amount:full::rewards_sender_delegates_a_recipient_opted_out": 52758
"policy:all_whitelisted::amount:full::rewards_sender_delegates_a_recipient_opted_out_with_delta": 65658
"policy:all_whitelisted::amount:full::rewards_sender_delegates_b_recipient_opted_out": 52746
"policy:all_whitelisted::amount:full::rewards_sender_delegates_b_recipient_opted_out_with_delta": 65658
"policy:all_whitelisted::amount:full::rewards_sender_opted_out_recipient_opted_out": 297758
"policy:all_whitelisted::amount:full::rewards_sender_opted_out_recipient_opted_out_with_delta": 303958
"policy:all_whitelisted::amount:some::rewards_recipient_opted_out": 57558
"policy:all_whitelisted::amount:some::rewards_recipient_opted_out_with_delta": 313858
"policy:all_whitelisted::amount:some::rewards_sender_delegates_a_recipient_opted_out": 57558
"policy:all_whitelisted::amount:some::rewards_sender_delegates_a_recipient_opted_out_with_delta": 320458
"policy:all_whitelisted::amount:some::rewards_sender_delegates_b_recipient_opted_out": 57558
"policy:all_whitelisted::amount:some::rewards_sender_delegates_b_recipient_opted_out_with_delta": 320458
"policy:all_whitelisted::amount:some::rewards_sender_opted_out_recipient_opted_out": 302558
"policy:all_whitelisted::amount:some::rewards_sender_opted_out_recipient_opted_out_with_delta": 308758
"policy:all_whitelisted::amount:zero::rewards_recipient_opted_out": 49134
"policy:all_whitelisted::amount:zero::rewards_recipient_opted_out_with_delta": 305434
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_a_recipient_opted_out": 49134
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_a_recipient_opted_out_with_delta": 312034
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_b_recipient_opted_out": 49134
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_b_recipient_opted_out_with_delta": 312034
"policy:all_whitelisted::amount:zero::rewards_sender_opted_out_recipient_opted_out": 296934
"policy:all_whitelisted::amount:zero::rewards_sender_opted_out_recipient_opted_out_with_delta": 303122
"policy:needs_whitelist::amount:full::rewards_recipient_opted_out": 59158
"policy:needs_whitelist::amount:full::rewards_sender_delegates_a_recipient_opted_out": 59158
"policy:needs_whitelist::amount:full::rewards_sender_delegates_a_recipient_opted_out_with_delta": 72058
"policy:needs_whitelist::amount:full::rewards_sender_delegates_b_recipient_opted_out": 59158
"policy:needs_whitelist::amount:full::rewards_sender_delegates_b_recipient_opted_out_with_delta": 72058
"policy:needs_whitelist::amount:full::rewards_sender_opted_out_recipient_opted_out": 304158
"policy:needs_whitelist::amount:full::rewards_sender_opted_out_recipient_opted_out_with_delta": 310358
"policy:needs_whitelist::amount:some": 58946
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_a": 58958
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_a_with_delta": 571958
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_b": 58958
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_b_with_delta": 571958
"policy:needs_whitelist::amount:some::rewards_recipient_opted_out": 63958
"policy:needs_whitelist::amount:some::rewards_recipient_opted_out_with_delta": 320258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a": 58958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_a": 58958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_a_with_delta": 322558
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_b": 58958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_b_with_delta": 578558
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_opted_out": 63958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_opted_out_with_delta": 326858
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_with_delta": 571958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b": 58958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_a": 58958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_a_with_delta": 578558
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_b": 58958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_b_with_delta": 322546
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_opted_out": 63958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_opted_out_with_delta": 326858
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_with_delta": 571946
"policy:needs_whitelist::amount:some::rewards_sender_opted_out": 313958
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_a": 313958
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_a_with_delta": 576858
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_b": 313946
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_b_with_delta": 576858
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_opted_out": 308958
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_opted_out_with_delta": 315158
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_with_delta": 570258
"policy:needs_whitelist::amount:some::rewards_with_delta": 565358
"policy:needs_whitelist::amount:zero::rewards_recipient_opted_out": 55534
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_a_recipient_opted_out": 55522
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_a_recipient_opted_out_with_delta": 318434
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_b_recipient_opted_out": 55534
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_b_recipient_opted_out_with_delta": 318434
"policy:needs_whitelist::amount:zero::rewards_sender_opted_out_recipient_opted_out": 303334
"policy:needs_whitelist::amount:zero::rewards_sender_opted_out_recipient_opted_out_with_delta": 309534
"virtual_address::policy:all_whitelisted::amount:some": 62366
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_a": 56366
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_a_with_delta": 322166
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_b": 56366
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_b_with_delta": 322166
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_opted_out": 311366
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_opted_out_with_delta": 320466
"virtual_address::policy:all_whitelisted::amount:some::rewards_with_delta": 315566
"virtual_address::policy:needs_whitelist::amount:some": 62766
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_a": 62766
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_a_with_delta": 328566
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_b": 62766
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_b_with_delta": 328566
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_opted_out": 317766
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_opted_out_with_delta": 326866
