crates/node/tests/it/gas/snapshots/it__gas__tip20_transfers__tip20_transfer_gas_snapshot_t7.snap
---
source: crates/node/tests/it/gas/tip20_transfers.rs
expression: gas
---
"policy:all_whitelisted::amount:full::rewards_recipient_opted_out": 41446
"policy:all_whitelisted::amount:full::rewards_recipient_opted_out_with_delta": 41458
"policy:all_whitelisted::amount:full::rewards_sender_delegates_a_recipient_opted_out": 41458
"policy:all_whitelisted::amount:full::rewards_sender_delegates_a_recipient_opted_out_with_delta": 41458
"policy:all_whitelisted::amount:full::rewards_sender_delegates_b_recipient_opted_out": 41446
"policy:all_whitelisted::amount:full::rewards_sender_delegates_b_recipient_opted_out_with_delta": 41458
"policy:all_whitelisted::amount:full::rewards_sender_opted_out_recipient_opted_out": 291458
"policy:all_whitelisted::amount:full::rewards_sender_opted_out_recipient_opted_out_with_delta": 291458
"policy:all_whitelisted::amount:some::rewards_recipient_opted_out": 46258
"policy:all_whitelisted::amount:some::rewards_recipient_opted_out_with_delta": 46258
"policy:all_whitelisted::amount:some::rewards_sender_delegates_a_recipient_opted_out": 46258
"policy:all_whitelisted::amount:some::rewards_sender_delegates_a_recipient_opted_out_with_delta": 46258
"policy:all_whitelisted::amount:some::rewards_sender_delegates_b_recipient_opted_out": 46258
"policy:all_whitelisted::amount:some::rewards_sender_delegates_b_recipient_opted_out_with_delta": 46258
"policy:all_whitelisted::amount:some::rewards_sender_opted_out_recipient_opted_out": 296258
"policy:all_whitelisted::amount:some::rewards_sender_opted_out_recipient_opted_out_with_delta": 296258
"policy:all_whitelisted::amount:zero::rewards_recipient_opted_out": 40634
"policy:all_whitelisted::amount:zero::rewards_recipient_opted_out_with_delta": 40634
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_a_recipient_opted_out": 40634
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_a_recipient_opted_out_with_delta": 40634
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_b_recipient_opted_out": 40634
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_b_recipient_opted_out_with_delta": 40634
"policy:all_whitelisted::amount:zero::rewards_sender_opted_out_recipient_opted_out": 290634
"policy:all_whitelisted::amount:zero::rewards_sender_opted_out_recipient_opted_out_with_delta": 290622
"policy:needs_whitelist::amount:full::rewards_recipient_opted_out": 47858
"policy:needs_whitelist::amount:full::rewards_sender_delegates_a_recipient_opted_out": 47858
"policy:needs_whitelist::amount:full::rewards_sender_delegates_a_recipient_opted_out_with_delta": 47858
"policy:needs_whitelist::amount:full::rewards_sender_delegates_b_recipient_opted_out": 47858
"policy:needs_whitelist::amount:full::rewards_sender_delegates_b_recipient_opted_out_with_delta": 47858
"policy:needs_whitelist::amount:full::rewards_sender_opted_out_recipient_opted_out": 297858
"policy:needs_whitelist::amount:full::rewards_sender_opted_out_recipient_opted_out_with_delta": 297858
"policy:needs_whitelist::amount:some": 52646
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_a": 52658
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_a_with_delta": 52658
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_b": 52658
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_b_with_delta": 52658
"policy:needs_whitelist::amount:some::rewards_recipient_opted_out": 52658
"policy:needs_whitelist::amount:some::rewards_recipient_opted_out_with_delta": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_a": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_a_with_delta": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_b": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_b_with_delta": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_opted_out": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_opted_out_with_delta": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_with_delta": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_a": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_a_with_delta": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_b": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_b_with_delta": 52646
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_opted_out": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_opted_out_with_delta": 52658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_with_delta": 52646
"policy:needs_whitelist::amount:some::rewards_sender_opted_out": 302658
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_a": 302658
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_a_with_delta": 302658
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_b": 302646
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_b_with_delta": 302658
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_opted_out": 302658
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_opted_out_with_delta": 302658
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_with_delta": 302658
"policy:needs_whitelist::amount:some::rewards_with_delta": 52658
"policy:needs_whitelist::amount:zero::rewards_recipient_opted_out": 47034
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_a_recipient_opted_out": 47022
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_a_recipient_opted_out_with_delta": 47034
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_b_recipient_opted_out": 47034
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_b_recipient_opted_out_with_delta": 47034
"policy:needs_whitelist::amount:zero::rewards_sender_opted_out_recipient_opted_out": 297034
"policy:needs_whitelist::amount:zero::rewards_sender_opted_out_recipient_opted_out_with_delta": 297034
"virtual_address::policy:all_whitelisted::amount:some": 50066
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_a": 50066
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_a_with_delta": 50066
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_b": 50066
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_b_with_delta": 50066
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_opted_out": 300066
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_opted_out_with_delta": 300066
"virtual_address::policy:all_whitelisted::amount:some::rewards_with_delta": 50066
"virtual_address::policy:needs_whitelist::amount:some": 56466
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_a": 56466
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_a_with_delta": 56466
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_b": 56466
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_b_with_delta": 56466
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_opted_out": 306466
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_opted_out_with_delta": 306466
