crates/node/tests/it/gas/snapshots/it__gas__tip20_transfers__tip20_transfer_gas_snapshot_t8.snap
---
source: crates/node/tests/it/gas/tip20_transfers.rs
expression: gas
---
"policy:all_whitelisted::amount:full::rewards_recipient_opted_out": 44746
"policy:all_whitelisted::amount:full::rewards_recipient_opted_out_with_delta": 44758
"policy:all_whitelisted::amount:full::rewards_sender_delegates_a_recipient_opted_out": 44758
"policy:all_whitelisted::amount:full::rewards_sender_delegates_a_recipient_opted_out_with_delta": 44758
"policy:all_whitelisted::amount:full::rewards_sender_delegates_b_recipient_opted_out": 44746
"policy:all_whitelisted::amount:full::rewards_sender_delegates_b_recipient_opted_out_with_delta": 44758
"policy:all_whitelisted::amount:full::rewards_sender_opted_out_recipient_opted_out": 294758
"policy:all_whitelisted::amount:full::rewards_sender_opted_out_recipient_opted_out_with_delta": 294758
"policy:all_whitelisted::amount:some::rewards_recipient_opted_out": 39858
"policy:all_whitelisted::amount:some::rewards_recipient_opted_out_with_delta": 39858
"policy:all_whitelisted::amount:some::rewards_sender_delegates_a_recipient_opted_out": 39858
"policy:all_whitelisted::amount:some::rewards_sender_delegates_a_recipient_opted_out_with_delta": 39858
"policy:all_whitelisted::amount:some::rewards_sender_delegates_b_recipient_opted_out": 39858
"policy:all_whitelisted::amount:some::rewards_sender_delegates_b_recipient_opted_out_with_delta": 39858
"policy:all_whitelisted::amount:some::rewards_sender_opted_out_recipient_opted_out": 289858
"policy:all_whitelisted::amount:some::rewards_sender_opted_out_recipient_opted_out_with_delta": 289858
"policy:all_whitelisted::amount:zero::rewards_recipient_opted_out": 34234
"policy:all_whitelisted::amount:zero::rewards_recipient_opted_out_with_delta": 34234
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_a_recipient_opted_out": 34234
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_a_recipient_opted_out_with_delta": 34234
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_b_recipient_opted_out": 34234
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_b_recipient_opted_out_with_delta": 34234
"policy:all_whitelisted::amount:zero::rewards_sender_opted_out_recipient_opted_out": 284234
"policy:all_whitelisted::amount:zero::rewards_sender_opted_out_recipient_opted_out_with_delta": 284222
"policy:needs_whitelist::amount:full::rewards_recipient_opted_out": 51158
"policy:needs_whitelist::amount:full::rewards_sender_delegates_a_recipient_opted_out": 51158
"policy:needs_whitelist::amount:full::rewards_sender_delegates_a_recipient_opted_out_with_delta": 51158
"policy:needs_whitelist::amount:full::rewards_sender_delegates_b_recipient_opted_out": 51158
"policy:needs_whitelist::amount:full::rewards_sender_delegates_b_recipient_opted_out_with_delta": 51158
"policy:needs_whitelist::amount:full::rewards_sender_opted_out_recipient_opted_out": 301158
"policy:needs_whitelist::amount:full::rewards_sender_opted_out_recipient_opted_out_with_delta": 301158
"policy:needs_whitelist::amount:some": 46246
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_a": 46258
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_a_with_delta": 46258
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_b": 46258
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_b_with_delta": 46258
"policy:needs_whitelist::amount:some::rewards_recipient_opted_out": 46258
"policy:needs_whitelist::amount:some::rewards_recipient_opted_out_with_delta": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_a": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_a_with_delta": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_b": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_b_with_delta": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_opted_out": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_opted_out_with_delta": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_with_delta": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_a": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_a_with_delta": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_b": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_b_with_delta": 46246
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_opted_out": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_opted_out_with_delta": 46258
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_with_delta": 46246
"policy:needs_whitelist::amount:some::rewards_sender_opted_out": 296258
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_a": 296258
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_a_with_delta": 296258
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_b": 296246
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_b_with_delta": 296258
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_opted_out": 296258
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_opted_out_with_delta": 296258
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_with_delta": 296258
"policy:needs_whitelist::amount:some::rewards_with_delta": 46258
"policy:needs_whitelist::amount:zero::rewards_recipient_opted_out": 40634
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_a_recipient_opted_out": 40622
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_a_recipient_opted_out_with_delta": 40634
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_b_recipient_opted_out": 40634
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_b_recipient_opted_out_with_delta": 40634
"policy:needs_whitelist::amount:zero::rewards_sender_opted_out_recipient_opted_out": 290634
"policy:needs_whitelist::amount:zero::rewards_sender_opted_out_recipient_opted_out_with_delta": 290634
"virtual_address::policy:all_whitelisted::amount:some": 43666
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_a": 43666
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_a_with_delta": 43666
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_b": 43666
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_b_with_delta": 43666
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_opted_out": 293666
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_opted_out_with_delta": 293666
"virtual_address::policy:all_whitelisted::amount:some::rewards_with_delta": 43666
"virtual_address::policy:needs_whitelist::amount:some": 50066
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_a": 50066
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_a_with_delta": 50066
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_b": 50066
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_b_with_delta": 50066
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_opted_out": 300066
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_opted_out_with_delta": 300066
