crates/node/tests/it/gas/snapshots/it__gas__tip20_transfers__tip20_transfer_gas_snapshots.snap
---
source: crates/node/tests/it/gas/tip20_transfers.rs
expression: gas
---
"policy:all_whitelisted::amount:full::rewards_recipient_opted_out": 54846
"policy:all_whitelisted::amount:full::rewards_recipient_opted_out_with_delta": 555558
"policy:all_whitelisted::amount:full::rewards_sender_delegates_a_recipient_opted_out": 54858
"policy:all_whitelisted::amount:full::rewards_sender_delegates_a_recipient_opted_out_with_delta": 67758
"policy:all_whitelisted::amount:full::rewards_sender_delegates_b_recipient_opted_out": 54846
"policy:all_whitelisted::amount:full::rewards_sender_delegates_b_recipient_opted_out_with_delta": 67758
"policy:all_whitelisted::amount:full::rewards_sender_opted_out_recipient_opted_out": 299858
"policy:all_whitelisted::amount:full::rewards_sender_opted_out_recipient_opted_out_with_delta": 306058
"policy:all_whitelisted::amount:some::rewards_recipient_opted_out": 59658
"policy:all_whitelisted::amount:some::rewards_recipient_opted_out_with_delta": 315958
"policy:all_whitelisted::amount:some::rewards_sender_delegates_a_recipient_opted_out": 59658
"policy:all_whitelisted::amount:some::rewards_sender_delegates_a_recipient_opted_out_with_delta": 322558
"policy:all_whitelisted::amount:some::rewards_sender_delegates_b_recipient_opted_out": 59658
"policy:all_whitelisted::amount:some::rewards_sender_delegates_b_recipient_opted_out_with_delta": 322558
"policy:all_whitelisted::amount:some::rewards_sender_opted_out_recipient_opted_out": 304658
"policy:all_whitelisted::amount:some::rewards_sender_opted_out_recipient_opted_out_with_delta": 310858
"policy:all_whitelisted::amount:zero::rewards_recipient_opted_out": 51234
"policy:all_whitelisted::amount:zero::rewards_recipient_opted_out_with_delta": 307534
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_a_recipient_opted_out": 51234
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_a_recipient_opted_out_with_delta": 314134
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_b_recipient_opted_out": 51234
"policy:all_whitelisted::amount:zero::rewards_sender_delegates_b_recipient_opted_out_with_delta": 314134
"policy:all_whitelisted::amount:zero::rewards_sender_opted_out_recipient_opted_out": 299034
"policy:all_whitelisted::amount:zero::rewards_sender_opted_out_recipient_opted_out_with_delta": 305222
"policy:needs_whitelist::amount:full::rewards_recipient_opted_out": 61258
"policy:needs_whitelist::amount:full::rewards_sender_delegates_a_recipient_opted_out": 61258
"policy:needs_whitelist::amount:full::rewards_sender_delegates_a_recipient_opted_out_with_delta": 74158
"policy:needs_whitelist::amount:full::rewards_sender_delegates_b_recipient_opted_out": 61258
"policy:needs_whitelist::amount:full::rewards_sender_delegates_b_recipient_opted_out_with_delta": 74158
"policy:needs_whitelist::amount:full::rewards_sender_opted_out_recipient_opted_out": 306258
"policy:needs_whitelist::amount:full::rewards_sender_opted_out_recipient_opted_out_with_delta": 312458
"policy:needs_whitelist::amount:some": 61046
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_a": 61058
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_a_with_delta": 574058
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_b": 61058
"policy:needs_whitelist::amount:some::rewards_recipient_delegates_b_with_delta": 574058
"policy:needs_whitelist::amount:some::rewards_recipient_opted_out": 66058
"policy:needs_whitelist::amount:some::rewards_recipient_opted_out_with_delta": 322358
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a": 61058
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_a": 61058
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_a_with_delta": 324658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_b": 61058
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_delegates_b_with_delta": 580658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_opted_out": 66058
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_recipient_opted_out_with_delta": 328958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_a_with_delta": 574058
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b": 61058
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_a": 61058
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_a_with_delta": 580658
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_b": 61058
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_delegates_b_with_delta": 324646
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_opted_out": 66058
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_recipient_opted_out_with_delta": 328958
"policy:needs_whitelist::amount:some::rewards_sender_delegates_b_with_delta": 574046
"policy:needs_whitelist::amount:some::rewards_sender_opted_out": 316058
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_a": 316058
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_a_with_delta": 578958
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_b": 316046
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_delegates_b_with_delta": 578958
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_opted_out": 311058
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_recipient_opted_out_with_delta": 317258
"policy:needs_whitelist::amount:some::rewards_sender_opted_out_with_delta": 572358
"policy:needs_whitelist::amount:some::rewards_with_delta": 567458
"policy:needs_whitelist::amount:zero::rewards_recipient_opted_out": 57634
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_a_recipient_opted_out": 57622
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_a_recipient_opted_out_with_delta": 320534
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_b_recipient_opted_out": 57634
"policy:needs_whitelist::amount:zero::rewards_sender_delegates_b_recipient_opted_out_with_delta": 320534
"policy:needs_whitelist::amount:zero::rewards_sender_opted_out_recipient_opted_out": 305434
"policy:needs_whitelist::amount:zero::rewards_sender_opted_out_recipient_opted_out_with_delta": 311634
"virtual_address::policy:all_whitelisted::amount:some": 64514
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_a": 58514
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_a_with_delta": 324314
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_b": 58514
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_delegates_b_with_delta": 324314
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_opted_out": 313514
"virtual_address::policy:all_whitelisted::amount:some::rewards_sender_opted_out_with_delta": 322614
"virtual_address::policy:all_whitelisted::amount:some::rewards_with_delta": 317714
"virtual_address::policy:needs_whitelist::amount:some": 64914
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_a": 64914
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_a_with_delta": 330714
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_b": 64914
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_delegates_b_with_delta": 330714
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_opted_out": 319914
"virtual_address::policy:needs_whitelist::amount:some::rewards_sender_opted_out_with_delta": 329014
