crates/node/tests/it/gas/snapshots/it__gas__tip20_transfers__tip20_transfer_with_memo_t0_gas_snapshot.snap
---
source: crates/node/tests/it/gas/tip20_transfers.rs
expression: gas
---
t0_transfer_with_memo: 72495
